# projectmind

./: .env.example  main.py  pyproject.toml
config/: settings.py
core/: chunker.py  embedding.py  ingestion.py  store.py  utils.py
docs/: schema.md
docs/superpowers/plans/: 2026-03-26-chunker-config-refactor.md  2026-03-26-neighbor-context-retrieval.md
docs/superpowers/specs/: 2026-03-26-chunker-config-refactor-design.md  2026-03-26-neighbor-context-retrieval-design.md
models/: core.py  nodes.py
repository/: Ingestion.py  chunks.py  connection.py
routes/: ingestion.py
services/: ingestion.py
tests/: test_chunker.py  test_models.py  test_settings.py
