[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.1",
    "fastembed>=0.8.0",
    "flask>=3.1.3",
    "langchain>=1.2.13",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.1",
    "llama-index>=0.14.18",
    "llama-index-core>=0.14.18",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-embeddings-openai>=0.6.0",
    "psycopg[binary,pool]>=3.1",
    "uuid>=1.30",
]
